--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,12 +1,6 @@
-pip==19.2.3
-flake8==3.7.8
-Click==7.1.2
-black==21.7b0
-beepy==1.0.7
-black==22.10.0
-certifi==2022.9.24
-chardet==5.0.0
-charset-normalizer==2.1.1
-click==8.1.3
-configparser==5.3.0
-pytest==7.2.0
+beepy
+click
+configparser
+
+black
+pytest
